--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <!-- Hero Section -->
     <div class="hero">
       <h1 style="color: white">Master Power BI Today!</h1>
-      <p style="color: black">
+      <p style="color: black font-size: 13px" >
         Transform Data into Insights with Our Expert-Led Courses
       </p>
       <a
