--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <div class="hero">
       <h1 style="color: white">Master Power BI Today!</h1>
       <p style="color: black font-size: 13px" >
-        Transform Data into Insights with Our Expert-Led Courses
+        Transform Data into Insights with Our Courses.
       </p>
       <a
         href="#enroll"
@@ -424,7 +424,6 @@
       <div class="follow col" style="padding-left: 300px">
         <h4>Follow Us</h4>
         <div class="icon">
-          <i class="fab fa-facebook"></i>
           <i class="fab fa-twitter"></i>
           <i class="fab fa-instagram"></i>
           <i class="fab fa-pinterest-p"></i>
